# get_song_bpm

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/cpp/: audio-decoder.cpp  bpm-calculator.cpp  extract-waveform.cpp  jni-bridge.cpp
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/get_song_bpm/: AudioAnalyzer.kt  GetSongBpmPlugin.kt
android/src/main/kotlin/com/leoleoleo/getsongbpm/: AudioDecoder.kt  BPMCalculator.kt  DebugLog.kt  GetSongBpmPlugin.kt  JNIInterface.kt  JNIRepository.kt  MethodCallRepository.kt  MethodHelper.kt  SongProfilerSingleton.kt
android/src/main/kotlin/com/leoleoleo/getsongbpm/utils/: DebugLog.kt
android/src/test/kotlin/com/example/get_song_bpm/: GetSongBpmPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/get_song_bpm_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: get_song_bpm.podspec
ios/Classes/: AudioDecoder.swift  BpmCalculator.swift  GetSongBpmPlugin.swift  SongProfilerSingleton.swift  WaveformExtractor.swift
lib/: AudioConfigs.dart  SongProfiler.dart  get_song_bpm.dart  get_song_bpm_method_channel.dart  get_song_bpm_platform_interface.dart
lib/song_profiler/: SongProfiler.dart  audio_configs.dart  debug_configs.dart  debug_log.dart
lib/utils/: debug_log.dart
test/: get_song_bpm_method_channel_test.dart  get_song_bpm_test.dart
